# wsm_program_vnasanje

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Fix-Run.ps1  LICENSE  Makefile  README.md  build_and_test.ps1  debug_inspect.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: setup_env.sh
tests/: 2025-581-racun.xml  25-24412.xml  CUSTOMERINVOICES_2025-04-01T14-29-47_2081078.xml  CUSTOMERINVOICES_2025-04-02T14-27-29_2082483.xml  PR5584-Slika1.XML  PR5690-Slika1.XML  PR5691-Slika2.XML  PR5697-Slika2.XML  PR5707-Slika2.XML  PR5918-Slika2.XML  PR5937-Slika2.XML  PR5942-Slika2.XML  PR5943-Slika2.XML  PR6159-Slika2.XML  PR6167-Slika2.XML  Racun_st._25-24412.xml  SE_after_SU.XML  VP2025-1799-racun.xml  allowance_with_vat.xml  discount_line.xml  discount_line_amount.xml  discount_line_both.xml  discount_line_factor.xml  discount_line_no_ns.xml  discount_line_sg26_pcd.xml  doc_discount_summary_only.xml  gln_only.xml  header_net_204.xml  header_tax_rate.xml  header_vat_rate_multi.xml  line_missing_moa124.xml  line_moa125_only.xml  line_tax_sg52.xml  minimal_doc_charge.xml  minimal_doc_discount.xml  minimal_line_charge.xml  minimal_line_discount.xml  minimal_line_discount_no_ns.xml  mismatch_grand_total.xml  service_date_dd_mm_yyyy.xml  (+147 more)
tools/: eslog_parser_report.py  preglej_povezave.py
wsm/: __init__.py  analyze.py  cli.py  constants.py  discounts.py  run.py  supplier_store.py  utils.py
wsm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wsm_program_vnasanje/: requirements.txt
(+41 files in other folders)
