[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wsm*"]
exclude = ["wsm_vector_embedding*", "tests*"]

[project]
name = "wsm"
version = "0.1.0"
dependencies = ["pandas", "pdfplumber", "openpyxl"]

[project.scripts]
wsm = "wsm.cli:main"
wsm-gui = "wsm.run:main"
