[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wsm*"]
exclude = ["wsm_vector_embedding*", "tests*"]

# -------------------------------------------------
# ⚠️  NOVO: vključimo CSV v paket
[tool.setuptools.package-data]
wsm = ["data/*.csv"]
# -------------------------------------------------

[project]
name = "wsm"
version = "0.1.0"
dependencies = [
    "pandas",
    "pdfplumber",
    "openpyxl",
    "click",
]

[project.optional-dependencies]
pyqt = ["PyQt5>=5.15"]
plot = ["matplotlib", "mplcursors"]
dev = [
    "pandas",
    "openpyxl",
    "pdfplumber",
    "PyQt5",
    "matplotlib",
]

[project.scripts]
wsm = "wsm.cli:main"
wsm-gui = "wsm.run:main"

[tool.black]
line-length = 79
target-version = ["py311"]
